objects/Reseller_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager_Email__c</fullName>
        <label>Account Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <formula>Account_Name__r.Owner.FirstName +&apos; &apos;+ Account_Name__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reseller Agreements</relationshipLabel>
        <relationshipName>Reseller_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Annual_target_amount__c</fullName>
        <label>Annual target amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_target_currency__c</fullName>
        <label>Annual target currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AUD - Australian Dollar</fullName>
                </value>
                <value>
                    <fullName>BRL - Brazilian Real</fullName>
                </value>
                <value>
                    <fullName>CAD - Canadian Dollar</fullName>
                </value>
                <value>
                    <fullName>CHF - Swiss Franc</fullName>
                </value>
                <value>
                    <fullName>CNY - Chinese Yuan</fullName>
                </value>
                <value>
                    <fullName>DKK - Danish Krone</fullName>
                </value>
                <value>
                    <fullName>EUR - Euro</fullName>
                </value>
                <value>
                    <fullName>GBP - British Pound</fullName>
                </value>
                <value>
                    <fullName>HKD - Hong Kong Dollar</fullName>
                </value>
                <value>
                    <fullName>HUF - Hungarian Forint</fullName>
                </value>
                <value>
                    <fullName>IDR - Indonesian Rupiah</fullName>
                </value>
                <value>
                    <fullName>INR - Indian Rupee</fullName>
                </value>
                <value>
                    <fullName>JPY - Japanese Yen</fullName>
                </value>
                <value>
                    <fullName>KRW - Korean Won</fullName>
                </value>
                <value>
                    <fullName>MXN - Mexican Peso</fullName>
                </value>
                <value>
                    <fullName>MYR - Malaysian Ringgit</fullName>
                </value>
                <value>
                    <fullName>NOK - Norwegian Krone</fullName>
                </value>
                <value>
                    <fullName>NZD - New Zealand Dollar</fullName>
                </value>
                <value>
                    <fullName>OMRO - Omani Rial</fullName>
                </value>
                <value>
                    <fullName>PHP - Philippine Peso</fullName>
                </value>
                <value>
                    <fullName>PKR - Pakistani Rupee</fullName>
                </value>
                <value>
                    <fullName>PLN - Polish Zloty</fullName>
                </value>
                <value>
                    <fullName>SAR - Saudi Arabian Riyal</fullName>
                </value>
                <value>
                    <fullName>SEK - Swedish Krona</fullName>
                </value>
                <value>
                    <fullName>SGD - Singapore Dollar</fullName>
                </value>
                <value>
                    <fullName>THB - Thai Baht</fullName>
                </value>
                <value>
                    <fullName>TRY - Turkish Lira (New)</fullName>
                </value>
                <value>
                    <fullName>TWD - Taiwan Dollar</fullName>
                </value>
                <value>
                    <fullName>USD - U.S. Dollar</fullName>
                </value>
                <value>
                    <fullName>VND - Vietnam Dong</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_target_year__c</fullName>
        <label>Annual target year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Regional_Business_Unit__c</fullName>
        <label>Assigned Regional BU</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Full company name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_VAT_Number__c</fullName>
        <label>Company VAT Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Reseller Agreements</relationshipLabel>
        <relationshipName>Reseller_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_Location__c</fullName>
        <label>Country Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alderney</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bonaire</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DNumber2__c</fullName>
        <formula>Account_Name__r.Account_Number__c</formula>
        <label>DNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DNumber__c</fullName>
        <label>DNumber</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Left_for_Reseller_Agreement_End_da__c</fullName>
        <formula>End_date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left for Reseller Agreement End da</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Turnover_USD__c</fullName>
        <label>Estimated Annual Turnover</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$10,000 - $20,000</fullName>
                </value>
                <value>
                    <fullName>$20,001 - $40,000</fullName>
                </value>
                <value>
                    <fullName>$40,001 - $60,000</fullName>
                </value>
                <value>
                    <fullName>$60,001 - $100,000</fullName>
                </value>
                <value>
                    <fullName>$100,001 - $300,000</fullName>
                </value>
                <value>
                    <fullName>$300,001 - $500,000</fullName>
                </value>
                <value>
                    <fullName>$500,001 - Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_Purchase_Value_with_CEB_USD__c</fullName>
        <label>Estimated Purchase Value with CEB(USD)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$0 - $500</fullName>
                </value>
                <value>
                    <fullName>$501 - $1,000</fullName>
                </value>
                <value>
                    <fullName>$1,001 - $2,000</fullName>
                </value>
                <value>
                    <fullName>$2,001 - $5,000</fullName>
                </value>
                <value>
                    <fullName>$5,001 - $10,000</fullName>
                </value>
                <value>
                    <fullName>$10,001 - $30,000</fullName>
                </value>
                <value>
                    <fullName>$30,001 - $50,000</fullName>
                </value>
                <value>
                    <fullName>$50,001 - $100,000</fullName>
                </value>
                <value>
                    <fullName>$100,001 - $200,000</fullName>
                </value>
                <value>
                    <fullName>$200,001 - Above</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry focus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Aerospace/Defense</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Airline</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Banking</fullName>
                </value>
                <value>
                    <fullName>Biotech</fullName>
                </value>
                <value>
                    <fullName>Chemical Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Conglomerates</fullName>
                </value>
                <value>
                    <fullName>Construction</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Consumer Products</fullName>
                </value>
                <value>
                    <fullName>Credit Union</fullName>
                </value>
                <value>
                    <fullName>Diversified Services</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Educational Services</fullName>
                </value>
                <value>
                    <fullName>Electronics Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Energy</fullName>
                </value>
                <value>
                    <fullName>Entertainment &amp; Leisure</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                </value>
                <value>
                    <fullName>Government and Public Sector</fullName>
                </value>
                <value>
                    <fullName>Government - Federal</fullName>
                </value>
                <value>
                    <fullName>Government - Local</fullName>
                </value>
                <value>
                    <fullName>Government - State</fullName>
                </value>
                <value>
                    <fullName>Healthcare</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Hotels and Restaurants</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_company_representative__c</fullName>
        <label>Name of company representative</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postcode__c</fullName>
        <label>Postcode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Office_Address__c</fullName>
        <label>Registered Office Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_to_operate_in_other_territories__c</fullName>
        <label>Request to operate in other territories</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Alderney</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegowina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending approval</fullName>
                </value>
                <value>
                    <fullName>Live</fullName>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T_s_C_s__c</fullName>
        <defaultValue>false</defaultValue>
        <label>T’s &amp; C’s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminated_date__c</fullName>
        <label>Termination date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Reseller Partner</fullName>
                </value>
                <value>
                    <fullName>Premium Reseller Partner</fullName>
                </value>
                <value>
                    <fullName>Enterprise Reseller Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title_of_company_representation__c</fullName>
        <label>Title of company representation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_months_back__c</fullName>
        <formula>LastModifiedDate &lt;= ADDMONTHS(NOW(),-18)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 months old</label>
        <type>Checkbox</type>
    </fields>
    <label>Reseller Agreement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Tier__c</columns>
        <columns>Company_Name__c</columns>
        <columns>DNumber__c</columns>
        <columns>Assigned_Regional_Business_Unit__c</columns>
        <columns>Account_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>RA{00000000}</displayFormat>
        <label>RA number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reseller Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>